<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_PowerDemand" Id="{434479ad-f678-4d4c-926d-ec343f545ffd}">
    <Declaration><![CDATA[TYPE ST_PowerDemand :
STRUCT
	b_Demand_24V	:	BOOL;
	b_Demand_400V	:	BOOL;
	b_Demand_HVDC	:	BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>